# audio-mixer

./: .gitignore  Cargo.toml  README.md
audio_core/: Cargo.toml
audio_core/src/: core.rs  file.rs  lib.rs  main.rs  media.rs
audio_core/src/app/: models.rs
audio_core/src/core/: analyzer.rs  cisor.rs  fft.rs  generation.rs  models.rs  scissor.rs  transformation.rs
audio_core/src/media/: player.rs
src/: app.rs  core.rs  file.rs  main.rs
src/core/: models.rs
src/media/: player.rs
wasm-api/: Cargo.toml
wasm-api/src/: audio.rs  engine.rs  lib.rs
wasm-api/src/engine/: models.rs
web-ui/: .eslintcache  .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web-ui/public/worklet/: queue-output-processor.js  wasm-engine-processor.js  wasm-engine-processor_v2.js  wasm-output-processor.js
web-ui/src/: App.tsx
web-ui/src/components/: AudioFileInput.tsx  AudioPlayer.tsx  DeformCanvas.tsx  FileInput.tsx  TrackPanel.tsx  TransportBar.tsx  theme-provider.tsx
web-ui/src/components/charts/: BarChart.tsx
web-ui/src/components/ui/: chart.tsx
web-ui/src/lib/audio/: audio.utils.ts  engine.context.tsx  engine.hook.ts  engine.provider.ts  initAndPlayWasmWorklet.ts  initAudioWorklet.ts
web-ui/src/pages/: AudioManager.tsx  RootLayout.tsx
