[package]
name = "wasm-api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # wasm requires cdylib

[dependencies]
wasm-bindgen = "0.2"
audio_core = { path = "../audio_core" } # link to the core library
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.77"
imp = "0.1.0"
getrandom = { version = "0.2", features = ["js"] }
